--- a/index.html
+++ b/index.html
@@ -15,8 +15,55 @@
                 <h1>Totes Trivia</h1>
                 <div class="row">
                     <div class="col-md-6">
-                        <h2>moar stuff</h2>
+                        <h2>Time remaining goes here</h2>
+                        <form>
+                            <h1>Here is question 1</h1>
+                            <div>
+                                <input type="radio" id="answer1" name="contact" value="email">
+                                <label for="answer1">answer1</label>
 
+                                <input type="radio" id="answer2" name="contact" value="phone">
+                                <label for="answer2">answer2</label>
+
+                                <input type="radio" id="answer3" name="contact" value="mail">
+                                <label for="answer3">answer3</label>
+                            </div>
+                            <div>
+                                <button type="submit">Submit</button>
+                            </div>
+                        </form>
+                        <form>
+                            <h1>Here is question 1</h1>
+                            <div>
+                                <input type="radio" id="answer1" name="contact" value="email">
+                                <label for="answer1">answer1</label>
+
+                                <input type="radio" id="answer2" name="contact" value="phone">
+                                <label for="answer2">answer2</label>
+
+                                <input type="radio" id="answer3" name="contact" value="mail">
+                                <label for="answer3">answer3</label>
+                            </div>
+                            <div>
+                                <button type="submit">Submit</button>
+                            </div>
+                        </form>
+                        <form>
+                            <h1>Here is question 1</h1>
+                            <div>
+                                <input type="radio" id="answer1" name="contact" value="email">
+                                <label for="answer1">answer1</label>
+
+                                <input type="radio" id="answer2" name="contact" value="phone">
+                                <label for="answer2">answer2</label>
+
+                                <input type="radio" id="answer3" name="contact" value="mail">
+                                <label for="answer3">answer3</label>
+                            </div>
+                            <div>
+                                <button type="submit">Submit</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
